<resources>
    <string name="app_name">MuRom</string>
    <string name="upload_avatar">Upload</string>
    <string name="test">Test</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_post">Post</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_reels">Reels</string>
    <string name="bottom_nav_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_google">Login with Google</string>
    <string name="dev_login">Dev Login</string>
    <string name="logout">Logout</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="newsfeed_image">newsfeed_image</string>
    <string name="default_post_likes">0 likes</string>
    <string name="default_post_desc">Default post desc</string>
    <string name="close_button">close button</string>
    <string name="story_image">story_image</string>
    <string name="profile_post_item">Profile Post Item</string>
    <string name="profile_posts_grid_view_title">Posts</string>
    <string name="flip_vertically">Flip Vertically</string>
    <string name="flip_horizontally">Flip Horizontally</string>
    <string name="add_a_new_post">Add a new post</string>
    <string name="edit_story">Edit story</string>
    <string name="delete_this_story">Delete this story</string>
    <string name="deleting">Deleting…</string>
    <string name="post_edit">post_edit</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_icon">Add icon</string>
    <string name="type_something_here">Type something here...</string>
    <string name="crop">Crop</string>
    <string name="post">Post</string>
    <string name="trim">Trim</string>
    <string name="comments">Comments</string>
    <string name="type_in_something">Type in something...</string>
    <string name="send_token">Send token</string>
    <string name="love">love</string>
    <string name="username">username</string>
    <string name="comment_content">Comment content</string>
    <string name="comment_timestamp">Comment timestamp</string>
    <string name="_0">0</string>
</resources>