<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_post"
        android:title="@string/bottom_nav_post"
        android:icon="@drawable/murom_ic_image_selector"/>
    <item
        android:id="@+id/bottom_nav_search"
        android:title="@string/bottom_nav_search"
        android:icon="@drawable/murom_ic_search_selector"/>

    <item
        android:id="@+id/bottom_nav_home_hidden"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/bottom_nav_reels"
        android:title="@string/bottom_nav_reels"
        android:icon="@drawable/murom_ic_video_selector"/>

    <item
        android:id="@+id/bottom_nav_profile"
        android:title="@string/bottom_nav_profile"
        android:icon="@drawable/murom_ic_profile_selector"/>
</menu>