<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/comment_avatar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@color/primary_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/baseline_person_24" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        app:flow_verticalGap="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/comment_love_container"
        app:layout_constraintStart_toEndOf="@+id/comment_avatar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/comment_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/comment_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/comment_content" />

        <TextView
            android:id="@+id/comment_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/comment_timestamp"
            android:textColor="@color/gray_500" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_love_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/comment_love_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/love"
            android:background="@color/transparent"
            android:src="@drawable/murom_ic_love" />

        <TextView
            android:id="@+id/comment_love_count"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>