<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/story_fragment_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/story_fragment_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/murom_ic_3dots"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/edit_story" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/story_fragment_avatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/primary_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/story_fragment_edit_button"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circular" />

        <TextView
            android:id="@+id/story_fragment_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/story_fragment_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/story_fragment_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_margin="0dp"
            android:visibility="gone"
            android:text="@string/delete_this_story"
            android:textColor="@color/white"
            android:backgroundTint="@color/error_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/story_fragment_edit_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/story_fragment_close_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/transparent"
            android:contentDescription="@string/close_button"
            android:src="@drawable/murom_ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/story_fragment_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/story_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_fragment_header_container" />

    <VideoView
        android:id="@+id/story_fragment_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/story_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_fragment_header_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/story_fragment_touch_surface"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_fragment_header_container"/>

    <ProgressBar
        android:id="@+id/story_fragment_image_loading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_fragment_header_container" />
</androidx.constraintlayout.widget.ConstraintLayout>